chat function w errors

--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "chessapp",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@babel/preset-react": "^7.7.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "prop-types": "^15.7.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react_ujs": "^2.6.0"
+  }
 }
